Bug 108486 - Incompatible result.json generation between igt_runner and piglit summary
Summary: Incompatible result.json generation between igt_runner and piglit summary
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: IGT (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-18 16:04 UTC by Andi
Modified: 2018-10-31 12:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Test list I'm trying to test (2.41 KB, text/plain)
2018-10-18 16:04 UTC, Andi
no flags Details

Description Andi 2018-10-18 16:04:06 UTC
Created attachment 142081 [details]
Test list I'm trying to test

I tried to simulate (dry-run) a test using the runner/igt_runner but the result.json created fails to be parsed by piglit. The test list is in the attachment in case it's needed.

Steps to reproduce the error:

$ <path_to_igt>/build/runner/igt_runner -d --test-list test_list <path_to_igt>/build/tests <output_dir>

$ cd <output_dir>

$ mkdir res

$ piglist summary html res/ result.json

I get the following error:

Traceback (most recent call last):
  File "/usr/bin/piglit", line 178, in <module>
    main()
  File "/usr/bin/piglit", line 174, in main
    sys.exit(runner(args))
  File "/usr/lib/x86_64-linux-gnu/piglit/framework/exceptions.py", line 51, in _inner
    func(*args, **kwargs)
  File "/usr/lib/x86_64-linux-gnu/piglit/framework/programs/summary.py", line 119, in html
    summary.html(args.resultsFiles, args.summaryDir, args.exclude_details)
  File "/usr/lib/x86_64-linux-gnu/piglit/framework/summary/html_.py", line 178, in html
    _make_testrun_info(results, destination, exclude)
  File "/usr/lib/x86_64-linux-gnu/piglit/framework/summary/html_.py", line 99, in _make_testrun_info
    totals=each.totals['root'],
KeyError: 'root'
Comment 1 Andi 2018-10-18 17:13:27 UTC
the incompatible result.json happens also without the -d (dry-run) and with different test list inputs. I guess the igt_runner generates always an incompatible result.json
Comment 2 Petri Latvala 2018-10-19 13:06:55 UTC
https://patchwork.freedesktop.org/series/51238/ sent for a fix. Won't merge it yet until it gets through the currently overloaded CI.
Comment 3 Petri Latvala 2018-10-23 10:29:24 UTC
commit b633344e7407f2086199b9d835aa980ba4c29dfa
Author: Petri Latvala <petri.latvala@intel.com>
Date:   Fri Oct 19 11:46:48 2018 +0300

    runner: Add "root" also to the "totals" object
Comment 4 Andi 2018-10-23 13:32:34 UTC
I tested and it works... thanks Petri!

Andi


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.